--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,7 +128,7 @@ User Created=False
 Advanced=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Hud
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 ContentBrowserTab1.SourcesExpanded=False
@@ -366,7 +366,7 @@ ChangeVariableType_Warning=False
 [RootWindow]
 ScreenPosition=X=369.000 Y=121.000
 WindowSize=X=1280.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1190,10 +1190,10 @@ BlueprintGraph.TimeStamp=2020.08.26-12.58.46
 BlueprintGraph.LastCompileMethod=Unknown
 SequencerWidgets.TimeStamp=2020.08.26-12.58.54
 SequencerWidgets.LastCompileMethod=Unknown
-Voice.TimeStamp=2020.08.26-12.58.56
-Voice.LastCompileMethod=Unknown
-MovieSceneCapture.TimeStamp=2020.08.26-12.58.51
-MovieSceneCapture.LastCompileMethod=Unknown
+Voice.TimeStamp=2020.11.18-13.07.59
+Voice.LastCompileMethod=External
+MovieSceneCapture.TimeStamp=2020.11.18-13.07.50
+MovieSceneCapture.LastCompileMethod=External
 
 [MessageLog]
 LastLogListing=SourceControl
