--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,7 +155,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/2DSideScrollerBP/Maps/2DSideScrollerExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [UMGEditor.Designer]
 PreviewWidth=1280
@@ -215,9 +215,9 @@ bShowOutlinerInfoColumn=True
 FrameNumberDisplayFormat=Seconds
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Hud/Countdown
-MRUItem1=/Game/Hud/Time
-MRUItem2=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem0=/Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode
+MRUItem1=/Game/Hud/Countdown
+MRUItem2=/Game/Hud/Time
 MRUItem3=/Game/Blueprints/Time
 MRUItem4=/Game/Sidescroller
 MRUItem5=/Game/NewBlueprint
@@ -356,6 +356,7 @@ PaperSpriteActor.Actor=True
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerGameMode.2DSideScrollerGameMode=1
 /Game/Hud/Time.Time=0
+/Game/Hud/Countdown.Countdown=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
